refactor: replace ScraperAPI with session-based NSE access (NseClient)